--- a/report.tex
+++ b/report.tex
@@ -280,7 +280,7 @@ TO BE COMPLETED
 
 
 \part{Implementation}
-\section{Key Control Elements}
+\section{Key Control Elements, Data Structures and Methods}
 \subsection{Removal of Duplicates}
 Removal of duplicates, figure 1 in the design shows a problem of pulses merging together. Two or more pulses could occupy the same space and this would cause the amount of pulses to exponentially grow and in turn cause the program to slow down and eventually crash.\\
 \\
@@ -339,8 +339,6 @@ $ soundSequencer.queueNote(hexCellCurrent.getNote(), channel);  $\\
 
 \end{center}
 
-\section{Implementation of Key Data Structures and Methods}
-???????????????????
 
 \pagebreak
 \section{Code Plan}
@@ -361,19 +359,16 @@ In terms of changes to functionality of the software, since the interim report w
 The code has also been vastly improved in terms of efficiency, having completely rewritten the sound sequencer, decreasing memory usage and required CPU time.\\
 \\
 Overall, in terms of improvements and updates, we have attempted to turn what was effectively a prototype into a finished, complete product.\\
-
-TO BE COMPLETED
 \section{Time and Planning}
 TO BE COMPLETED
 \section{Problems Encountered}
 TO BE COMPLETED
 
 \part{Conclusion}
-TO BE COMPLETED
+It is our conviction that we have produced a project of a high quality and high standard. \textit{'HEX'} conforms to and fulfills the specification drawn up at the beginning of the project
 
 \pagebreak
 \part{Appendices}
-klujghf;kjghglkjghslkjh
 \section{References}
 \bibliographystyle{IEEEtran}
 \bibliography{reportReferences}
