--- a/report.tex
+++ b/report.tex
@@ -362,7 +362,7 @@ TO BE COMPLETED
 TO BE COMPLETED
 
 \part{Conclusion}
-It is our conviction that we have produced a project of a high quality and high standard. \textit{'HEX'} conforms to and fulfills the specification drawn up at the beginning of the project
+It is our conviction that we have produced a project of a high quality and high standard. \textit{'HEX'} conforms to, fulfills and arguably exceeds the specification drawn up at the beginning of the project.
 
 \pagebreak
 \part{Appendices}
