--- a/report.tex
+++ b/report.tex
@@ -11,7 +11,8 @@
 \begin{titlepage}
 \title{G52GRP Interim Group Report\\HEX - A Chain Reactive Music Generator }
 \author{Group NHN2}
-\date{7th December 2012}
+\includegraphics[scale=0.6]{hexlogo.png}
+\date{22nd March 2013}
 \maketitle
 \thispagestyle{empty}
 \begin{center}
@@ -362,7 +363,7 @@ TO BE COMPLETED
 TO BE COMPLETED
 
 \part{Conclusion}
-It is our conviction that we have produced a project of a high quality and high standard. \textit{'HEX'} conforms to, fulfills and arguably exceeds the specification drawn up at the beginning of the project.
+It is our conviction that we have produced a project of a high quality and high standard. \textit{'HEX'} conforms to, fulfills and arguably exceeds the specification drawn up at the beginning of the project. Not only have we succesfully emulated the reacTogon hardware, but we have also extended it: affording a truly novel musical experience. The success of the software not only lies in the unique, neoteric functionality and experience; but also in the usability and contemporary design of the user interface. These factors coupled with the quality of the codebase, which employs Java best practice and object-oriented design yields a culmination of our efforts and an ultimately successful project.
 
 \pagebreak
 \part{Appendices}
