--- a/reportReferences.bib
+++ b/reportReferences.bib
@@ -47,3 +47,14 @@
 @ARTICLE{cthru,
    url = "http://www.c-thru-music.com/cgi/?page=spec-64"
    }
+   
+@ARTICLE{kb,
+   url = "http://www.kanbanflow.com"
+   }
+   
+@ARTICLE{SEP,
+   author = "S. L. Pfleeger, J. M. Atlee",
+   title = "Software Engineering 4th Edition",
+   publisher = "Pearson",
+   year = 2010,
+   } 
