--- a/reportReferences.bib
+++ b/reportReferences.bib
@@ -58,3 +58,29 @@
    publisher = "Pearson",
    year = 2010,
    } 
+   
+@ARTICLE{huber,
+   author = "D. M. Huber",
+   title = "The MIDI Manual",
+   year = 1991,
+   publisher = "Carmel, Indiana:SAMS"
+   }
+   
+@ARTICLE{brewster,
+	author = "S. Brewster",
+	title = "Nonspeech Auditory Output. In: The Human-Computer Interaction Handbook: Fundamentals, Evolving Technologies, and Emerging Applications.",
+	year = 2003,
+	publisher = "Lawrence Erlbaum Associates"
+	}
+   
+@ARTICLE{hashm,
+	url = "http://en.wikipedia.org/wiki/Hash_Maps"
+	}
+
+@ARTICLE{grids,
+	url = "http://www-cs-students.stanford.edu/~amitp/game-programming/grids/"
+	}
+	
+@ARTICLE{gdmath,
+	url = "http://www.gdreflections.com/2011/02/hexagonal-grid-math.html"
+	}
